Front-end, Debug class

--- a/public/assets/css/indexStyle.css
+++ b/public/assets/css/indexStyle.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&display=swap");
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1024px) {
 * {
   margin: 0;
 }
@@ -30,7 +30,6 @@ h5 {
 .logoQAw {
   display: flex;
   width: 15vw;
-  height: 60vh;
 }
 
 .logoQAnav, .logoQAnavBlack {
@@ -48,11 +47,10 @@ h5 {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  min-height: 100vh;
   justify-content: center;
 }
 
-.loggin {
+.logging {
   display: flex;
   flex-wrap: nowrap;
   align-items: flex-start;
@@ -62,13 +60,19 @@ h5 {
 .schudeleContainer,
 .registerContainer {
 
-  background-color: rgba(255, 255, 255, 0.7);
-  width: 100%;
+  background-color: rgba(255, 255, 255, 0.4);
+  width: 20vw;
+  padding: 3rem;
+  margin-top: 10vh;
+  margin-bottom: 10vh;
 }
 
-.loginContainer {
-  background-color: rgba(255, 255, 255, 0.7);
-  margin-top: 20vh;
+.loggingContainer {
+  background-color: rgba(255, 255, 255, 0.4);
+  margin-top: 10vh;
+  margin-bottom: 10vh;
+  width: 20vw;
+  padding: 3rem;
 }
 
 .restaurantCardSection {
@@ -193,8 +197,9 @@ footer {
 
 .copyright {
   display: flex;
-  flex-direction: column;
+  flex-direction: column !important;
   justify-content: center;
+  align-items: center;
 }
 
 .social{
@@ -244,9 +249,10 @@ footer {
   align-items: flex-start;
   justify-content: center;
   background-color: rgba(255, 255, 255, 0.4);
-  width: 100%;
+  width: 40vw;
   height: auto;
   border-radius: 8px;
+  margin: 5%;
 }
 
 /*MENUS - CARTE*/
@@ -568,7 +574,7 @@ aside {
   color: #fff;
 }
 
-.logginSection,
+.loggingSection,
 .homeSection,
 .carteSection,
 .menuSection {
@@ -601,7 +607,7 @@ aside {
     gap: 9px;
     }
   
-  .logginSection,
+  .loggingSection,
   .homeSection,
   .carteSection,
   .menuSection {
@@ -695,7 +701,852 @@ aside {
 
 /*--------------------------------------------------------------------------------------*/
 /*VERSION MOBILE*/
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 1024px) and (orientation: portrait){
+
+  * {
+    margin: 0;
+  }
+
+  body{
+    width: 100vw;
+  }
+  
+  main {
+    min-height: auto;
+  }
+  
+  nav {
+    background-image: url("../img/snack.jpg");
+  }
+
+  .navbarLogo{
+    display: flex;
+    color: #fff;
+    
+  }
+  .navbar-nav {
+    --bs-nav-link-padding-x: 0;
+    --bs-nav-link-padding-y: 0.5rem;
+    --bs-nav-link-font-weight: ;
+    --bs-nav-link-color: var(--bs-navbar-color);
+    --bs-nav-link-hover-color: var(--bs-navbar-hover-color);
+    --bs-nav-link-disabled-color: var(--bs-navbar-disabled-color);
+    display: flex;
+    flex-direction: column;
+    padding-left: 20px;
+    padding-top: 10px;
+    margin-bottom: 0;
+    list-style: none;
+  }
+
+  .fa-solid, .fas {
+    font-weight: 900;
+    font-size: 2rem;
+}
+
+  .main_container {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    background-color: black;
+    background-image: url(../img/Hamb.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 4rem;
+  }
+
+  .groupTitleBtn{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .starterCaps {
+    display: flex;
+    width: 100%;
+  }
+
+  .subtitleMainCard,
+  .MainCardTitle {
+    display: flex;
+    justify-content: center;
+  }
+
+  .headline {
+    display: flex;
+    padding-bottom: 30px;
+  }
+
+  /*change couleur background des boutons*/
+  .navbar-nav .nav-link:hover,
+  .navbar-nav .nav-link:active {
+    background-color: #555;
+    color: #fff;
+  }
+
+  label {
+    display: inline-block;
+    font-size: 2rem;
+}
+
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Cardo", serif;
+}
+
+
+h2,
+h3
+{
+  font-size: 3rem;
+  font-weight: 600;
+}
+
+h5{
+  font-size: 2.2rem;
+}
+
+.logoQAw {
+  display: flex;
+  width: 50vw;
+}
+
+.logoQAnav {
+  display: flex;
+  width: 360px;
+  height: 120px;
+  margin-left: 1rem;
+}
+
+.availabilityRight,
+.schudeleContainer,
+.registerContainer {
+
+  background-color: rgba(255, 255, 255, 0.4);
+  width: 100%;
+  padding: 5rem;
+  border-radius: 1.5rem;
+  margin-bottom: 20px;
+}
+
+.loggingContainer {
+  background-color: rgba(255, 255, 255, 0.4);
+  height: auto;
+  border-radius: 1.5rem;
+  padding: 5rem !important;
+  width: 95vw;
+}
+
+.col-md-4 {
+  flex: 0 0 auto;
+  width: 100%;
+}
+
+.restaurantCardSection {
+  display: flex;
+  color: #ffffff;
+  background-color: #000000;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url("../img/Bgardoise.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.reserve-button,
+.aside_button {
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+
+td {
+  width: auto;
+}
+
+.timetablesLunch,
+.timetablesDiner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2%;
+  font-size: 1.5rem;
+  width: 33%;
+}
+
+.timetables_list {
+  display: flex;
+  justify-content: space-between;
+}
+
+h5 {
+  display: flex;
+  justify-content: center;
+}
+
+.main_timetables {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.timetables_container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  border: 1px dashed;
+  border-radius: 10px;
+  width: 95%;
+  margin-bottom: 5%;
+}
+
+.timetables_title {
+  color: brown;
+  margin-top: 3%;
+
+}
+
+hr {
+  border: 1.5px dashed;
+  width: 100%;
+  align-self: center;
+}
+
+.timetables_lists_container {
+  display: flex;
+  flex-direction: column;
+  padding-left: 4%;
+  padding-right: 4%;
+}
+
+.timetables_list {
+  display: flex;
+  margin-bottom: 1%;
+}
+
+.day {
+  display: flex;
+  width: 33%;
+  color: brown;
+  font-weight: 500;
+  font-size: 1.5rem;
+}
+
+.newsletter_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+body::-webkit-scrollbar {
+  width: 0em;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: #f5f5f5;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #000000;
+}
+/*No scrollbar*/
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  bottom: 0;
+  margin-bottom: 0;
+}
+
+.copyright {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.social{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.logo_social {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+}
+
+.navbar-brand {
+  display: flex;
+  width: 10em;
+}
+
+.card-title {
+  background-color: var(--bs-card-cap-bg);
+}
+
+.subtitleMainCard,
+.MainCardTitle {
+  display: flex;
+  justify-content: center;
+  width: 100vw
+}
+
+.subtitleMainCard {
+  display: flex;
+  justify-content: center;
+}
+
+.headline {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 10px;
+  font-size: 4rem;
+}
+
+#titleMenu {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  background-color: rgba(255, 255, 255, 0.4);
+  height: auto;
+  border-radius: 1.5rem;
+  padding: 5rem;
+  width: 95vw;
+}
+
+/*MENUS - CARTE*/
+
+.list-group-item {
+  background: transparent !important;
+  color: white;
+}
+.list-group {
+  background: transparent !important;
+  color: white;
+}
+
+/* Page Menus */
+.menuCaps {
+  display: flex;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.MenusCard {
+  border: 2px dashed rgba(255, 255, 255, 0.7);
+  /*border-image: url("../img/Crayon.svg") 20 / 20px 100px / 1 round;*/
+  border-radius: 8px;
+}
+
+.starterCaps {
+  display: flex;
+}
+
+.starterCard {
+  border: 2px dashed rgba(255, 255, 255, 0.7);
+  /*border-image: url("../img/Crayon.svg") 20 / 20px 100px / 1 round;*/
+  border-radius: 8px;
+}
+
+.StarterTitle {
+  display: flex;
+  justify-content: center;
+  color: #ffbb00;
+}
+
+.mainMenu {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 10px;
+}
+
+.dishCaps,
+.starterCaps {
+  padding: 10px;
+}
+
+.list-group-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px;
+  padding-bottom: 0;
+}
+
+.name,
+.arrow,
+.price,
+.desc .TTC {
+  display: flex;
+  padding: 5px;
+  padding-bottom: 0;
+  font-size: 2rem;
+}
+
+.desc {
+  font-size: 1.5rem;
+  font-style: italic;
+  padding-left: 50px !important;
+}
+
+.span {
+  display: flex;
+  justify-content: right;
+}
+
+.img {
+  width: 30px;
+  height: 30px;
+}
+
+.starterList {
+  margin-top: 1.5rem;
+  padding: 10px !important;
+}
+
+.card-header {
+  padding: 0 !important;
+}
+
+.comboNameDesc {
+  display: flex;
+}
+
+.TTC {
+  margin-left: 3px;
+  font-size: 0.5rem;
+}
+
+.menuList {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.Title,
+.menuTitle,
+.nameMenu,
+.descMenu,
+.priceMenu {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 5px;
+
+}
+
+.Title {
+  font-size: 2rem;
+}
+
+.menuTitle {
+  font-size: 2rem;
+  color: #ffbb00;
+}
+
+.nameMenu {
+  font-size: 1.5rem;
+}
+
+.descMenu {
+  font-size: 1.2rem;
+}
+
+.menuName {
+  font-size: 1rem;
+}
+
+.priceMenu {
+  font-size: 1.5rem;
+}
+
+.list-group-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px;
+  padding-bottom: 0;
+}
+
+/*change couleur background des boutons*/
+.navbar-nav .nav-link:hover,
+.navbar-nav .active,
+.dropdown-item:hover {
+  background-color: #555;
+  color: #ffbb00;
+}
+
+.navbar-toggler-icon,
+.navbar-light .nav-link {
+  color: #fff;
+}
+
+.navbar-nav .nav-link.active,
+.navbar-nav .show > .nav-link {
+  color: #fff;
+}
+
+.active {
+  background-color: #555;
+  color: #ffbb00;
+}
+
+.navbar-toggler {
+  padding: var(--bs-navbar-toggler-padding-y) var(--bs-navbar-toggler-padding-x);
+  font-size: var(--bs-navbar-toggler-font-size);
+  line-height: 0.5;
+  color: #ffbb00;
+  background-color: transparent;
+  border: 1px solid transparent;
+  border-radius: var(--bs-navbar-toggler-border-radius);
+  transition: var(--bs-navbar-toggler-transition);
+  font-size: 3rem;
+  margin-top: 1rem;
+}
+
+.navbar-toggler-icon {
+  display: inline-block;
+  width: 2em;
+  height: 2em;
+  margin: 10px;
+  vertical-align: middle;
+  background-image: var(--bs-navbar-toggler-icon-bg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+}
+.ms-3 {
+  margin-left: 1rem !important;
+  font-size: 2rem;
+  padding-left: 20px;
+}
+
+.navbar-nav .dropdown-menu {
+  position: static;
+  padding-left: 20px;
+}
+
+.dropdown-item {
+  display: block;
+  width: 100%;
+  padding: var(--bs-dropdown-item-padding-y) var(--bs-dropdown-item-padding-x);
+  clear: both;
+  font-weight: 400;
+  color: var(--bs-dropdown-link-color);
+  text-align: inherit;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: transparent;
+  font-size: 2rem;
+  border: 0;
+}
+
+aside {
+  background-color: transparent;
+  background-image: url("../img/Bgardoise.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.galeryContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.galeryCub {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: #000000 solid 1px;
+  border-radius: 8px;
+  width: 100%;
+  overflow: hidden;
+}
+
+.galeryImg {
+  width: 100%;
+  border-radius: 5px;
+  object-fit: cover;
+  scale: 1.15;
+  transition: opacity 0.25s, scale 0.35s;
+}
+
+.galeryBody {
+  position: absolute;
+  inset: 0;
+  padding: 50px;
+  color: #fff;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 15px;
+  justify-content: center;
+}
+
+.galeryBody::before {
+  content: "";
+  position: absolute;
+  inset: 20px;
+  border: 2px solid #fff;
+  opacity: 0;
+  scale: 1.25;
+  transition: opacity 0.25s, scale 0.25s;
+}
+
+.galeryCub:hover .galeryImg {
+  opacity: 0.5;
+  scale: 1;
+}
+
+.galeryCub:hover .galeryCardtitle {
+  display: flex;
+  opacity: 1;
+  scale: 1;
+}
+
+.galeryCardtitle {
+  display: none;
+  font-size: 2rem;
+}
+
+.galeryTitleContainer {
+  display: flex;
+  justify-content: center;
+  font-size: 1.5rem;
+  background-color: #555;
+  height: 100px;
+}
+
+.galeryTitle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  text-align: center;
+}
+
+.scheduleButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 480px;
+  height: 180px;
+  font-size: 3rem;
+  margin-top: 30px;
+  border-radius: 8px;
+}
+
+.btn-primary {
+  --bs-btn-color: #ffbb00;;
+  --bs-btn-bg:  #555;
+  --bs-btn-border-color: #555;
+  --bs-btn-hover-color: #555;
+  --bs-btn-hover-bg: #ffbb00;
+  --bs-btn-hover-border-color: #ffc400e7;
+  --bs-btn-focus-shadow-rgb: 49, 132, 253;
+  --bs-btn-active-color: #ffbb00;
+  --bs-btn-active-bg: #555;
+  --bs-btn-active-border-color: #ffbb00;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #555;
+  --bs-btn-disabled-border-color: #555;
+}
+
+.groupTitleBtn {
+  width: 100%;
+}
+
+.groupPerso {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+  width: 100%;
+}
+
+.noEntry {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  color: #fff;
+}
+
+.loggingSection,
+.homeSection,
+.carteSection,
+.menuSection {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100vw;
+}
+
+/* Reservation*/
+
+.availability-slots{
+  display: flex;
+  justify-content: space-between
+  }
+  
+  #time-slots{
+  display: flex;
+  justify-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 6px;
+  }
+  
+  #time-slots2{
+    display: flex;
+    justify-items: center;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    gap: 9px;
+    }
+  
+  .logoLeft,
+  .cardMiddle,
+  .availabilityRight {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    border-radius: 1.5rem;
+    
+  }
+  
+  .reservationAvailabilityCard{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .form-control {
+    display: block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    font-size: 2.5rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: 0.375rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.form-label {
+  margin-bottom: 1rem;
+  font-size: 2rem;
+  padding-left: 0.5rem;
+}
+
+optgroup {
+  font-size: 1rem;
+}
+
+  
+  .lunchAvailability,
+  .dinerAvailability {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  align-items: flex-start;
+    width: 100%;
+    border-radius: 8px;
+    padding: 10px;
+  }
+
+  .legendAndInfo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
+  .legendGreen{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    height: 20px;
+    gap: 5px;
+  }
+  
+  .legendGreenCub{
+    width: 30px;
+    height: 30px;
+    background-color: #198754;
+
+    opacity: 70%;
+  }
+
+  .legendRed{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    height: 1rem;
+    gap: 5px;
+  }
+  
+  .legendRedCub{
+    width: 30px;
+    height: 30px;
+    background-color: #dc3545;
+    opacity: 70%;
+  }
+
+  .info{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    font-style: italic;
+  }
+  
+  .legendGreenText
+  .legendRedText{
+    font-size:larger;
+    color: #000000;
+  }
+}
+
+@media only screen and (max-width: 1024px) and (orientation: landscape){
 
   * {
     margin: 0;
@@ -812,7 +1663,7 @@ h5 {
   width: 100%;
 }
 
-.loginContainer {
+.loggingContainer {
   background-color: rgba(255, 255, 255, 0.7);
   margin-top: 30px;
 }
@@ -1333,7 +2184,7 @@ aside {
   color: #fff;
 }
 
-.logginSection,
+.loggingSection,
 .homeSection,
 .carteSection,
 .menuSection {
@@ -1367,7 +2218,7 @@ aside {
     gap: 9px;
     }
   
-  .logginSection,
+  .loggingSection,
   .homeSection,
   .carteSection,
   .menuSection {
