--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -4,16 +4,19 @@
 {% endblock %}
 {% block content %}
 	<main class="main_container container-fluid">
-		<div class="logoQAw">
-	<img src="{{ asset('assets/img/logoQAw.png') }}" alt="" class="logoQAw">
-	</div>
 		<div class="homeSection">
 			<div id="titleMenu" class="col col-lg-6 col-sm-12 col-md-7 flexCol">
 				<div class="groupTitleBtn">
-					<h1 class="headline"><b>Bienvenue</b></h1>
-					<h2 class="headline"><b>Le Quai Antique</b> et notre chef vous accueil !</h2>
+					<div class="logoQAw">
+						<img src="{{ asset('assets/img/logoQAnavBlack.png') }}" alt="" class="logoQAw">
+					</div>
+					<h1 class="headline">
+						<b>Le restaurant</b>
+						et notre chef vous accueil !</h1>
 					<a class="scheduleButton btn btn-primary" href="{{ path('app_reservation') }}" title="" role="button">
-						<span>Réservez une table <b>Maintenant</b></span>
+						<span>Réservez une table
+							<b>Maintenant</b>
+						</span>
 					</a>
 				</div>
 			</div>
@@ -28,22 +31,22 @@
 					<h3 class="subtitleMainCard">~ NOS PLATS LES PLUS APPRÉCIÉS ~</h3>
 					<hr>
 					<div class="card-body mainMenu">
-					<div class="card bg-transparent starterCaps">
-						{% if images is empty %}
-							<p class="noEntry">Aucune galerie n'a été trouvée.</p>
-						{% else %}
-							{% for image in images %}
-								<figure class="galeryCub col-md-2">
-									<img class="galeryImg" src="/uploads/images/gallery/{{image.illustration}}" alt="{{image.titre}}"/>
-									<figcaption class="galeryBody">
-										<h3 class="galeryCardtitle">{{image.titre}}</h3>
-										<p class="card-text"></p>
-									</figcaption>
-								</figure>
-							{% endfor %}
+						<div class="card bg-transparent starterCaps">
+							{% if images is empty %}
+								<p class="noEntry">Aucune galerie n'a été trouvée.</p>
+							{% else %}
+								{% for image in images %}
+									<figure class="galeryCub col-md-2">
+										<img class="galeryImg" src="/uploads/images/gallery/{{image.illustration}}" alt="{{image.titre}}"/>
+										<figcaption class="galeryBody">
+											<h3 class="galeryCardtitle">{{image.titre}}</h3>
+											<p class="card-text"></p>
+										</figcaption>
+									</figure>
+								{% endfor %}
+							</div>
 						</div>
 					</div>
-				</div>
 				</div>
 			{% endif %}
 		</section>
