--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -5,46 +5,49 @@
 
 {% block content %}
 	<main class="main_container container-fluid">
-    <div class="container-fluid">
-	{% for flash_error in app.flashes('verify_email_error') %}
-		<div class="alert alert-danger" role="alert">{{ flash_error }}</div>
-	{% endfor %}
-	<div class="container mb-4">
-		<div class="row justify-content-center">
-			<div class="col-md-4">
-				<div class="card p-3 registerContainer">
-					<div class="">
-						<h3 class="text-center"><b>Inscrivez-vous !</b></h3>
+		<div class="container-fluid">
+			{% for flash_error in app.flashes('verify_email_error') %}
+				<div class="alert alert-danger" role="alert">{{ flash_error }}</div>
+			{% endfor %}
+			<div class="container mb-4">
+				<div class="row justify-content-center">
+					<div class="card registerContainer">
+						<div class="">
+											<div class="logoQAw">
+						<img src="{{ asset('assets/img/logoQAnavBlack.png') }}" alt="" class="logoQAw">
 					</div>
-					<div class="card-body">
-						{{ form_start(registrationForm) }}
-						<div class="form-group mb-3">
-							{{ form_row(registrationForm.lastname) }}
+							<h1 class="text-center">
+								<b>Inscrivez-vous !</b>
+							</h1>
 						</div>
-						<div class="form-group mb-3">
-							{{ form_row(registrationForm.firstname) }}
+						<div class="card-body">
+							{{ form_start(registrationForm) }}
+							<div class="form-group mb-3">
+								{{ form_row(registrationForm.lastname) }}
+							</div>
+							<div class="form-group mb-3">
+								{{ form_row(registrationForm.firstname) }}
+							</div>
+							<div class="form-group mb-3">
+								{{ form_row(registrationForm.email) }}
+							</div>
+							<div class="form-group mb-3">
+								{{ form_row(registrationForm.password) }}
+							</div>
+							<div class="form-group mb-3">
+								{{ form_row(registrationForm.guestsNumber) }}
+							</div>
+							<div class="form-group mb-3">
+								{{ form_row(registrationForm.allergie) }}
+							</div>
+							<div class="form-group text-center">
+								<button type="submit" class="btn btn-primary">S'inscrire</button>
+							</div>
+							{{ form_end(registrationForm) }}
 						</div>
-						<div class="form-group mb-3">
-							{{ form_row(registrationForm.email) }}
-						</div>
-						<div class="form-group mb-3">
-							{{ form_row(registrationForm.password) }}
-						</div>
-						<div class="form-group mb-3">
-							{{ form_row(registrationForm.guestsNumber) }}
-						</div>
-						<div class="form-group mb-3">
-							{{ form_row(registrationForm.allergie) }}
-						</div>
-						<div class="form-group text-center">
-							<button type="submit" class="btn btn-primary">S'inscrire</button>
-						</div>
-						{{ form_end(registrationForm) }}
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	</div>
 	</main>
 {% endblock %}
