--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block content %}
-	<main class="main_container container-fluid loggin">
+	<main class="main_container container-fluid logging">
 		<div class="container-fluid">
 			<form method="post">
 				{% if error %}
@@ -18,27 +18,27 @@
 				{% endif %}
 				<div class="container">
 					<div class="row justify-content-center">
-						<div class="col-md-4 ">
-							<div class="card p-3 loginContainer">
-								<div class="">
-									<h3 class="text-center">Connectez-vous !</h3>
+						<div class="card loggingContainer">
+											<div class="logoQAw">
+						<img src="{{ asset('assets/img/logoQAnavBlack.png') }}" alt="" class="logoQAw">
+					</div>
+							<div>
+								<h1 class="text-center">Connectez-vous !</h1>
+							</div>
+							<div class="card-body">
+								<div class="form-group mb-3">
+									<label for="inputEmail">Email</label>
+									<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
 								</div>
-								<div class="card-body">
-									<div class="form-group mb-3">
-										<label for="inputEmail">Email</label>
-										<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-									</div>
 
-									<div class="form-group mb-3">
-										<label for="inputPassword">Mot de Passe</label>
-										<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-									</div>
-									<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-									<div class="form-group mb-3 row justify-content-center">
-										<div class="col-12 col-md-6 d-flex justify-content-center">
-											<button class="btn btn-primary btn-block mx-auto" type="submit">Se connecter</button>
-
-										</div>
+								<div class="form-group mb-3">
+									<label for="inputPassword">Mot de Passe</label>
+									<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+								</div>
+								<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+								<div class="form-group mb-3 row justify-content-center">
+									<div class="col-12 col-md-6 d-flex justify-content-center">
+										<button class="btn btn-primary btn-block mx-auto" type="submit">Se connecter</button>
 									</div>
 								</div>
 							</div>
