Front optimize CSS

--- a/templates/footer/index.html.twig
+++ b/templates/footer/index.html.twig
@@ -48,23 +48,21 @@
 					</table>
 				</div>
 				<div class="newsletter_container col-md-5 mb-3">
-					<form>
+					<img src="{{ asset('assets/img/logoQAnavBlack.png') }}" alt="logoLequai Antique" class="logoQAnav">
 						<h5>
 							<b>Abonnez-vous à notre newsletter</b>
 						</h5>
-						<p class="d-flex flex-column flex-sm-row w-100 gap-2">
+						<p class="newsletter">
 							Pour suivre les nouveautés culinaires 2023 de notre chef MICHANT.
 						</p>
-						<div class="d-flex flex-column flex-sm-row w-100 gap-2">
+						<div class="newsletter">
 							<label for="newsletter1" class="visually-hidden">
 								Adresse courriel
 							</label>
 							<input id="newsletter1" type="text" class="form-control" placeholder="Adresse courriel"/>
 							<button class="btn btn-primary" type="button">S’inscrire</button>
 						</div>
-					</form>
 				</div>
-
 				<div class="social">
 					<p>
 						<b>
@@ -73,23 +71,22 @@
 					<ul class="logo_social">
 						<li class="">
 							<a href="https://fr-fr.facebook.com/" target="_blank">
-								<img src="{{ asset('assets/img/reseaux/facebook.png') }}" width="40" height="40" alt="Lien vers la page Facebook"/>
+								<img src="{{ asset('assets/img/reseaux/facebook.png') }}" width="80" height="80" alt="Lien vers la page Facebook"/>
 							</a>
 						</li>
-						<li class="ms-3">
+						<li class="ms-4 social">
 							<a href="https://www.instagram.com/" target="_blank">
-								<img class="link-dark" src="{{ asset('assets/img/reseaux/instagram.png') }}" width="40" height="40" alt="Lien vers la page Instagram"/>
+								<img class="link-dark" src="{{ asset('assets/img/reseaux/instagram.png') }}" width="80" height="80" alt="Lien vers la page Instagram"/>
 							</a>
 						</li>
-						<li class="ms-3">
+						<li class="ms-4 social">
 							<a href="https://twitter.com/login/" target="_blank">
-								<img class="link-dark" src="{{ asset('assets/img/reseaux/twitter.png') }}" width="40" height="40" alt="Lien vers la page Twitter"/>
+								<img class="link-dark" src="{{ asset('assets/img/reseaux/twitter.png') }}" width="80" height="80" alt="Lien vers la page Twitter"/>
 							</a>
 						</li>
 					</ul>
 				</div>
-				<div class="copyright flex-sm-row py-4 my-4 border-top">
-					<img src="{{ asset('assets/img/logoQAnavBlack.png') }}" alt="" class="logoQAnav">
+				<div class="copyright">
 					<p>
 						© 2023 Le Quai Antique Tous droits réservés.
 					</p>
