--- a/public/assets/css/indexStyle.css
+++ b/public/assets/css/indexStyle.css
@@ -739,6 +739,26 @@ aside {
     list-style: none;
   }
 
+  .btn-success {
+    --bs-btn-color: #fff;
+    --bs-btn-bg: #198754;
+    --bs-btn-border-color: #198754;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #157347;
+    --bs-btn-hover-border-color: #146c43;
+    --bs-btn-focus-shadow-rgb: 60, 153, 110;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #146c43;
+    --bs-btn-active-border-color: #13653f;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #198754;
+    --bs-btn-disabled-border-color: #198754;
+    width: 150px;
+    height: 50px;
+    font-size: 1.5rem;
+  }
+
   .fa-solid, .fas {
     font-weight: 900;
     font-size: 2rem;
@@ -820,6 +840,7 @@ h5{
   width: 360px;
   height: 120px;
   margin-left: 1rem;
+  margin-bottom: 1rem;
 }
 
 .availabilityRight,
@@ -975,6 +996,7 @@ footer {
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  font-size: 1.5rem;
 }
 
 .social{
@@ -983,6 +1005,11 @@ footer {
   align-items: center;
 }
 
+.newsletter {
+  display: flex;
+  align-items: center;
+  font-size: 1.5rem;
+}
 .logo_social {
   display: flex;
   justify-content: center;
@@ -1239,6 +1266,11 @@ footer {
   line-height: 2;
 }
 
+.social{
+  padding-left: 20px;
+  font-size: 2rem;
+}
+
 .navbar-nav .dropdown-menu {
   position: static;
   padding-left: 20px;
@@ -1425,7 +1457,7 @@ aside {
   #time-slots2{
     display: flex;
     justify-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
     flex-wrap: wrap;
     gap: 9px;
     }
@@ -1452,9 +1484,9 @@ aside {
     display: block;
     width: 100%;
     padding: 0.375rem 0.75rem;
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: 400;
-    line-height: 1.5;
+    line-height: 2;
     color: #212529;
     background-color: #fff;
     background-clip: padding-box;
@@ -2161,6 +2193,7 @@ aside {
   --bs-btn-disabled-bg: #555;
   --bs-btn-disabled-border-color: #555;
 }
+
 
 .groupTitleBtn {
   width: 100%;
